third_party/move/move-compiler/tests/move_check/folding/unfoldable_constants.exp
error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:3:22
  │
3 │     const SHL0: u8 = 1 << 8;
  │                      ^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:4:23
  │
4 │     const SHL1: u64 = 1 << 64;
  │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:5:24
  │
5 │     const SHL2: u128 = 1 << 128;
  │                        ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:6:23
  │
6 │     const SHL3: u16 = 1 << 16;
  │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:7:23
  │
7 │     const SHL4: u32 = 1 << 32;
  │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants.move:9:22
  │
9 │     const SHR0: u8 = 0 >> 8;
  │                      ^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:10:23
   │
10 │     const SHR1: u64 = 0 >> 64;
   │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:11:24
   │
11 │     const SHR2: u128 = 0 >> 128;
   │                        ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:12:23
   │
12 │     const SHR3: u16 = 0 >> 16;
   │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:13:23
   │
13 │     const SHR4: u32 = 0 >> 32;
   │                       ^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:15:22
   │
15 │     const DIV0: u8 = 1 / 0;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:16:23
   │
16 │     const DIV1: u64 = 1 / 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:17:24
   │
17 │     const DIV2: u128 = 1 / 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:18:23
   │
18 │     const DIV3: u16 = 1 / 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:19:23
   │
19 │     const DIV4: u32 = 1 / 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:20:24
   │
20 │     const DIV5: u256 = 1 / 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:22:22
   │
22 │     const MOD0: u8 = 1 % 0;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:23:23
   │
23 │     const MOD1: u64 = 1 % 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:24:24
   │
24 │     const MOD2: u128 = 1 % 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:25:23
   │
25 │     const MOD3: u16 = 1 % 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:26:23
   │
26 │     const MOD4: u32 = 1 % 0;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:27:24
   │
27 │     const MOD5: u256 = 1 % 0;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:29:22
   │
29 │     const ADD0: u8 = 255 + 255;
   │                      ^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:30:23
   │
30 │     const ADD1: u64 = 18446744073709551615 + 18446744073709551615;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:32:9
   │
32 │         340282366920938463463374607431768211450 + 340282366920938463463374607431768211450;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:33:23
   │
33 │     const ADD3: u16 = 65535 + 65535;
   │                       ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:34:23
   │
34 │     const ADD4: u32 = 4294967295 + 4294967295;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:36:9
   │
36 │         115792089237316195423570985008687907853269984665640564039457584007913129639935 + 115792089237316195423570985008687907853269984665640564039457584007913129639935;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:38:22
   │
38 │     const SUB0: u8 = 0 - 1;
   │                      ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:39:23
   │
39 │     const SUB1: u64 = 0 - 1;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:40:24
   │
40 │     const SUB2: u128 = 0 - 1;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:41:23
   │
41 │     const SUB3: u16 = 0 - 1;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:42:23
   │
42 │     const SUB4: u32 = 0 - 1;
   │                       ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:43:24
   │
43 │     const SUB5: u256 = 0 - 1;
   │                        ^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:45:23
   │
45 │     const CAST0: u8 = ((256: u64) as u8);
   │                       ^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:46:24
   │
46 │     const CAST1: u64 = ((340282366920938463463374607431768211450: u128) as u64);
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:47:25
   │
47 │     const CAST4: u128 = ((340282366920938463463374607431768211456: u256) as u128);
   │                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:48:24
   │
48 │     const CAST2: u16 = ((65536: u64) as u16);
   │                        ^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants.move:49:24
   │
49 │     const CAST3: u32 = ((4294967296: u128) as u32);
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

